All modules building properly except for integration tests